# synthium

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: synthiumConfig.cmake.in
cmake-scripts/: GenerateVersionHeader.cmake
include/: crc64.h  loader.h  manager.h  pack2lib.h  synthium.h  version.h.in
include/synthium/: crc64.h  loader.h  manager.h  synthium.h  utils.h  version.h.in
src/: crc64.cpp  loader.cpp  manager.cpp  test_crc64.cpp  test_manager.cpp  test_pack2.cpp  utils.cpp
